<resources>
    <string name="app_name">Matrika</string>
    <string name="teleMedicine">Telemedicine App</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="signOut">Sign Out</string>
    <string name="share">Share</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="currentLocation">Use Current Location</string>
    <string name="phoneTitle">Phone</string>
    <string name="nameTitle">Full Name</string>
    <string name="emailTitle">Email</string>
    <string name="genderTitle">Sex</string>
    <string name="addressTitle">Address</string>
    <string name="districtTitle">District</string>
    <string name="upazilaTitle">Upazila</string>
    <string name="postalCodeTitle">Postal Code</string>
    <string name="countryTitle">Country</string>
    <string name="chooseAction">Choose Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="morning">Good Morning</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="evening">Good Evening</string>
    <string name="hello">Hello</string>
    <string name="profile">Profile</string>
    <string name="fileShare">File Share</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="device">Device</string>
    <string name="iotDevice">Iot Device</string>
    <string name="deviceData">Device Data</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="second">Sec</string>
    <string name="minute">Min</string>
    <string name="hour">HR</string>
    <string name="day">Day</string>
    <string name="ratingAndFeedback">Rating &amp; Feedback</string>
    <string name="shareAPkVia">Share Apk Via</string>
    <string name="select_CoverPhoto">Select Cover photo</string>
    <string name="select_ProfilePhoto">Select Profile photo</string>
    <string name="select_UserPhoto">Select Your Photo</string>
    <string name="select_Photo">Select Photo</string>
    <string name="select_ReportPhoto">Select Report Photo</string>
    <string name="select_NidPhoto">Select Your NID</string>
    <string name="yrs">Yrs</string>
    <string name="preferences">Preferences</string>
    <string name="allowNotifications">Allow Notifications</string>
    <string name="permissions">Permissions</string>
    <string name="phoneCallAccess">Phone Call Access</string>
    <string name="callPermission">Call Permission</string>
    <string name="locationAccess">Location Access</string>
    <string name="locationPermission">Location Permission</string>
    <string name="cameraAccess">Camera Access</string>
    <string name="cameraPermission">Camera Permission</string>
    <string name="galleryAccess">Gallery Access</string>
    <string name="galleryPermission">Gallery Permission</string>
    <string name="patientTitle">Patient</string>
    <string name="patients">Patients</string>
    <string name="followers">Followers</string>
    <string name="doctorTitle">Doctor</string>
    <string name="doctors">Doctors</string>
    <string name="presentAddress">Present Address</string>
    <string name="practiceAddress">Practice Address</string>
    <string name="personalDetails">Personal Details</string>
    <string name="academicDetails">Academic Details</string>
    <string name="professionalDetails">Professional Details</string>
    <string name="forgot">Forgot</string>
    <string name="yourPassword">Your Password!</string>
    <string name="giveFeedback">Give Feedback</string>
    <string name="view">View</string>
    <string name="upload">Upload</string>
    <string name="yourReport">Your Report</string>
    <string name="toYourDoctor">To Your Doctor!</string>
    <string name="toYourPatient">To Your Patient!</string>
    <string name="activeNow">Active Now</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any">Any</string>
    <string name="Requests">Requests</string>
    <string name="experience">Experience</string>
    <string name="ratings">Ratings</string>
    <string name="aboutDoctor">About Doctor</string>
    <string name="workingTime">Working Time</string>
    <string name="communication">Communication</string>
    <string name="messaging">Messaging</string>
    <string name="audioCall">Audio Call</string>
    <string name="videoCall">Video Call</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="doctorRightNow">Doctor Right Now!</string>
    <string name="viewAll">view all</string>
    <string name="report">Report</string>
    <string name="reports">Reports</string>
    <string name="medicalReports">Medical Reports</string>
    <string name="deviceReports">Device Reports</string>
    <string name="rememberMe">Remember me</string>
    <string name="password">Password</string>
    <string name="awards">Awards</string>
    <string name="bullet">&#8729;</string>
    <string name="name_Hint">Name</string>
    <string name="email_Hint">Email</string>
    <string name="phone_Hint">Phone</string>
    <string name="password_Hint">Password</string>
    <string name="confirmPassword_Hint">Confirm Password</string>
    <string name="maritalStatus_Hint">Marital Status</string>
    <string name="gender_Hint">Sex</string>
    <string name="dob_Hint">Date of Birth</string>
    <string name="height_Hint">Height</string>
    <string name="feet_Hint">ft</string>
    <string name="kg_Hint">kg</string>
    <string name="weight_Hint">Weight</string>
    <string name="language_Hint">Languages</string>
    <string name="bio_Hint">Describe your professional bio…</string>
    <string name="awards_Hint">Give details about any awards, publications or training (if any)…</string>
    <string name="qualification_Hint">Qualifications</string>
    <string name="specialty_Hint">Specialty</string>
    <string name="Specialist_Hint">Specialists</string>
    <string name="nid_Hint">NID No.</string>
    <string name="bmdc_Hint">BMDC Reg No.</string>
    <string name="consultationFees_Hint">Consultation Fees</string>
    <string name="address_Hint">Address</string>
    <string name="country_Hint">Country</string>
    <string name="district_Hint">District</string>
    <string name="upazila_Hint">Upazila</string>
    <string name="postalCode_Hint">Postal Code</string>
    <string name="message_Hint">Type a message…</string>
    <string name="writeHere_Hint">Write here…</string>
    <string name="tellUs_Hint">Please, tell us more…</string>
    <string name="title_Hint">Title</string>
    <string name="channelId_Hint">Channel Id</string>
    <string name="key_Hint">Key</string>
    <string name="searchForDoctors">Search for doctors</string>
    <string name="searchByName">Search by name/specialty</string>
    <string name="availability">Availability</string>
    <string name="latestBlog">Latest Blog</string>
    <string name="dummyContactNo">01523456…</string>
    <string name="dummyBmdcNo">Without A-(like 1,2,3)</string>
    <string name="zero">0</string>
    <string name="addDoctor">Add Doctor</string>
    <string name="cancelRequest">Cancel Request</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="unknown">Unknown</string>
    <string name="sentAnAttachment">Sent an attachment</string>
    <string name="bodyTemperature">TEMPERATURE</string>
    <string name="pulseRate">PULSE RATE</string>
    <string name="ecg">ECG</string>
    <string name="oxygenSaturation">OXYGEN SATURATION</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="allowNotificationMessage">&quot;Matrika&quot; app requires Notification permission, do you allow?</string>
    <string name="includingNotification">Including: Push Notification</string>
    <string name="dontAskAgain" >Don\'t ask again once prohibited</string>
    <string name="network_Error">Network error. Please retry when network is stable.</string>
    <string name="failureMessage">Sorry! please try again</string>
    <string name="failureToUpload">Sorry, there is a problem uploading your image!</string>
    <string name="haventAccess">Sorry! you haven\'t access right now</string>
    <string name="dataNotExist">Please! check your channel id &amp; key</string>
    <string name="profileUpdateFailed">Sorry! Profile Update failed, please try again</string>
    <string name="callPermissionMessage">Phone Call Permission is necessary for calling</string>
    <string name="galleryPermissionMessage">Gallery Permission is necessary for selecting photo</string>
    <string name="locationPermissionMessage">Location Permission is necessary for getting your Location</string>
    <string name="cameraPermissionMessage">Camera Permission is necessary for capturing photo</string>
    <string name="phoneCallAccessDetails">To contact with role</string>
    <string name="locationAccessDetails">For a better pickup experience</string>
    <string name="cameraAccessDetails">Capture photo using device camera</string>
    <string name="galleryAccessDetails">Upload photo from gallery</string>
    <string name="requestFailed">There was an error with your request</string>
    <string name="reportFailed">Sorry, report not sent</string>
    <string name="feedbackFailed">Sorry, feedback not sent</string>
    <string name="dontHaveAccount">If you don\'t have account?</string>
    <string name="yearsOfExperience">Years of Experience?</string>
    <string name="averageNoOfPatients">Average no. of patients you may consult in a day?</string>
    <string name="averageConsultationTime">Average consultation time (in minutes)?</string>
    <string name="confirmEmailMessage">Enter your email and we we\'ll send the instructions on how to reset your password.</string>
    <string name="feedbackDoctorMessage">If you have been asked for feedback about the care and treatment you’ve received from your doctor, please do try to take part – your views make a difference. Your doctor wants to know what you think as your feedback helps them look at how they can improve the care they give.</string>
    <string name="reportDoctorMessage">Why are you reporting this doctor?</string>
    <string name="viewDataMessage">You have to give your channel id &amp; key</string>
    <string name="reportPatientMessage">Why are you reporting this patient?</string>
    <string name="messagingDetails">Chat me up, share photos.</string>
    <string name="audioCallDetails">Call your doctor directly.</string>
    <string name="videoCallDetails">See your role live.</string>
    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="emailExist">Sorry! Your email already exist, please try another one</string>
    <string name="registrationFailed">Sorry! Registration failed, please try again later</string>
    <string name="allow">Allow Now</string>
    <string name="forbid">Forbid</string>
</resources>