<?xml version="1.0" encoding="utf-8"?>
<com.telemedicine.matrika.wiget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/passwordReset.Root.Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.ResetPasswordFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_Background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/margin_XX_Large"
            android:paddingStart="@dimen/padding_Large"
            android:paddingEnd="@dimen/padding_Large"
            android:background="@color/activity_Background">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/passwordReset.Back.Button"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:padding="@dimen/padding_Large"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_arrow_left"  />

        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_XX_Large"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTvStyle"
                android:fontFamily="@font/oxanium_light"
                android:layout_marginBottom="@dimen/margin_Small"
                android:text="@string/forgot"
                android:textSize="@dimen/text_Size_XXX_Large" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTvStyle"
                android:layout_marginBottom="@dimen/margin_Small"
                android:fontFamily="@font/oxanium_semi_bold"
                android:text="@string/yourPassword"
                android:textSize="@dimen/text_Size_XXX_Large" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TitleTvStyle"
            android:layout_marginTop="@dimen/margin_Medium"
            android:layout_marginStart="@dimen/margin_XX_Large"
            android:layout_marginEnd="@dimen/margin_XX_Large"
            android:layout_marginBottom="@dimen/margin_X_Large"
            android:text="@string/confirmEmailMessage"
            android:textColor="@color/font_Color_LightGray"
            android:textSize="@dimen/text_Size_X_Small"
            android:fontFamily="@font/oxanium_regular"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordReset.Email.Input"
            style="@style/InputFieldStyle"
            android:drawableStart="@drawable/ic_input_email"
            android:hint="@string/email_Hint"
            android:inputType="textWebEmailAddress"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/passwordReset.Send.Button"
            style="@style/ButtonStyle"
            android:text="@string/send"
            android:layout_marginTop="@dimen/margin_Large"
            android:layout_marginBottom="@dimen/margin_XX_Large" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.telemedicine.matrika.wiget.ArcView>